# lab4

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  in.txt  main.c  main.h  out.txt
